nav fixed globally. blog post preview box positioning broken on news page.

--- a/wp-content/themes/kt/css/bootstrap.css
+++ b/wp-content/themes/kt/css/bootstrap.css
@@ -1608,14 +1608,16 @@ pre code {
 }
 @media (min-width: 1200px) {
   .container {
-    width: 1170px;
+    width: 1200px;
   }
 }
 
 @media (min-width: 1380px) {
-  .container {
+  
+    .container {
     max-width: 1380px;
   }
+
 }
 .container-fluid {
   padding-right: 15px;
