--- a/wp-content/themes/kt/style.css
+++ b/wp-content/themes/kt/style.css
@@ -494,7 +494,7 @@ span.top_btn {
 }
 
 .boxed-row{
-    padding: 106px 135px;  
+    padding: 106px 100px;  
 
 }
 
@@ -983,8 +983,45 @@ li.album_link a:active, li.album_link a:focus{
     margin-top: 100px;
 }
 
+#news-nav{
+    min-height: 400px;
+    background: url('img/news_hdr.jpg') 0 50px no-repeat;
+  -webkit-background-size: cover; 
+  -moz-background-size: cover; 
+  -o-background-size: cover; 
+  background-size: cover;
+    border: 24px #fff solid;   
+}
+
+#news-nav .navbar-brand{
+    margin-top: -24px;
+    left: -10px;
+    position: absolute;
+}
+
+#news-nav h1{
+     margin-top: -75px;
+}
+
+
+#news_calendar{
+     margin-left: 145px;   
+    }
+
+
+#blog_preview_container{
+        max-width: 950px;
+        float: left; 
+        margin-left: -50px;   
+    }
+
+    
+aside #calendar_container{
+         float: right;   
+    }
+
 #news_page_wrapper{
-     width: 100%;
+    width: 100%;
     padding: 0 60px;
 }
 
@@ -992,7 +1029,6 @@ li.album_link a:active, li.album_link a:focus{
 
 #newsbox.boxed-row{
     width: 100%; 
-
     padding: 0px;   
     border: 0;
 }
@@ -1002,11 +1038,6 @@ li.album_link a:active, li.album_link a:focus{
     text-shadow: 0px 5px 10px rgba(0, 0, 0, .5);
 }
 
-#news_calendar{
-    padding: 0;
-    border: 0;
-    position: relative;
-}
 
 #news_page_wrapper #news_calendar{
      width: 1380px;   
@@ -1015,12 +1046,7 @@ li.album_link a:active, li.album_link a:focus{
 }
 
 
-#blog_preview_container{
-    max-width: 950px;
-    float: left;
-    margin: 0;
-    border: 0;
-}
+
 
 .blog_preview{
     width: 295px;
@@ -1060,6 +1086,29 @@ li.album_link a:active, li.album_link a:focus{
 
 }
 
+#blog_preview_container h5 a:link, #blog_preview_container h5 a:visited{
+    color: #6d6e71;
+    border: none;
+    text-decoration: none;
+    font-weight: 200;
+    letter-spacing: 2px;    
+}
+
+#blog_preview_container h5 a:hover{
+    color: #cfd0d0;
+    text-decoration: none;
+    border: none;
+}
+
+#blog_preview_container h5 a:active, #blog_preview_container h5 a:focus{
+    color: #6d6e71;
+    border-b: none;
+    text-decoration: none;
+    font-weight: 200;
+    letter-spacing: 2px;
+}
+
+
 #blog_preview_container .more-link{
     text-align: right;
     bottom: 0;
@@ -1067,7 +1116,7 @@ li.album_link a:active, li.album_link a:focus{
     clear: both;
 }
 
-#blog_preview_container .more-link a:link{
+#blog_preview_container .more-link a:link, #blog_preview_container .more-link a:visited{
     color: #6d6e71;
     border-bottom: 1px solid #6d6e71;
     padding-bottom: 2px;
@@ -1077,8 +1126,8 @@ li.album_link a:active, li.album_link a:focus{
 }
 
 #blog_preview_container .more-link a:hover{
-    color: #cf122a;
-    border-bottom: 1px solid #cf122a;
+    color: #cfd0d0;
+    border-bottom: 1px solid #cfd0d0;
 }
 
 #blog_preview_container .more-link a:active, #blog_preview_container .more-link a:focus{
@@ -1191,10 +1240,12 @@ li.album_link a:active, li.album_link a:focus{
 #calendar_container .more-link{
     text-align: center;
     clear: both;
+    display: block;
+    margin-bottom: 17px;
 }
 
 
-#calendar_container .more-link a:link{
+#calendar_container .more-link a:link, #calendar_container .more-link a:visited{
     color: #6d6e71;
     border-bottom: 1px solid #6d6e71;
     padding-bottom: 2px;
@@ -1204,7 +1255,7 @@ li.album_link a:active, li.album_link a:focus{
 }
 
 #calendar_container .more-link a:hover{
-    color: #cf122a;
+    color: #cfd0d0;
     border-bottom: 1px solid #cfd0d0;
 }
 
@@ -1288,8 +1339,9 @@ p.wp-caption-text{
 
 
 .single-tags{
-    max-width: 45%;
+    max-width: 70%;
     margin-top: 30px;
+    margin-bottom: 30px;
     float: left;
 }
 
@@ -1915,18 +1967,16 @@ button.close {
         margin-top: 30%;
     }
     
+    #news_calendar{
+         max-width: 950px;   
+    }
+    
      .blog_preview h5{
         width: 100%;
          font-size: 17px;
          line-height: 22px;
         margin: 10px auto;
     }
-    
-    #blog_preview_container{
-        width: 100% 
-
-    }
-    
    
     #calendar_container{
         width: 100%;
@@ -1987,7 +2037,10 @@ button.close {
 
 @media (max-width: 1170){
     
-   
+    #news_calendar{
+         max-width: 950px;   
+    }
+    
     
     #blog_preview_container{
         width: 100%;
@@ -1996,18 +2049,6 @@ button.close {
         float: none;
          padding: 0;
     }
-    
-    .blog_thumb_container{
-        width: 100%;
-        height: 212px;
-        margin: 0 auto;
-    }
-    
-    .blog_preview{
-        width: 100%;
-        margin: 0 auto;
-    } 
-    
     
 }
 
@@ -2022,7 +2063,12 @@ button.close {
         margin-bottom: 0;
     }
   
-    #blog_preview_container{
+ #news_calendar{
+         max-width: 700px;   
+         margin-left: 0 auto;
+    }
+    
+      #blog_preview_container{
         width: 100%;
         margin: 0 auto;
         clear: both;
@@ -2030,41 +2076,17 @@ button.close {
          padding: 0;
     }
     
-    .blog_thumb_container{
-        width: 270px;
-         height: 211px;
-        margin: 0 auto;
-    }
-    
-    .blog_preview{
-        width: 100%;
-        margin: 0 auto;
-    }
-    
-    
     #calendar_container{
-        width: 50%;
-        margin: 30px auto;
+        max-width: 625px;
+        margin: 0 auto;
         float: none;
     }
-
     
 }
 
 
 @media (max-width: 768px) {
     
-
-    
-    
-      .resp{
-     display: initial; 
-      position: fixed;
-      top: 5px;
-      left: 5px;
-      color: aquamarine;
-      font-weight: bolder;
-}  
     
     .navbar-brand{
          left: -1px;   
@@ -2530,16 +2552,7 @@ button.close {
     }
     
 
-    
-     #blog_preview_container{
-        width: 270px;
-         height: 211px;
-        margin: 0 auto;
-        clear: both;
-        float: none;
-        padding: 0;
-    }
-    
+
     .blog_thumb_container{
         width: 100%;
         height: 212px;
@@ -2548,9 +2561,8 @@ button.close {
     
  
     
-    .blog_preview{
+    .blog_preview img{
         width: 100%;
-        margin: 0 auto;
     }
     
     #calendar_container{
@@ -2565,3 +2577,18 @@ button.close {
     
     
 } /* end <768px styles */
+
+@media (max-width: 630px){
+        
+    #newsbox{
+         width: 270px;   
+    }
+    
+#blog_preview_container{
+        width: 270px;
+        margin: 0 auto;
+        clear: both;
+        float: none;
+    }
+    
+}
